Simplify lambda makefile

--- a/lambda/Makefile
+++ b/lambda/Makefile
@@ -4,33 +4,37 @@ SHELL=/bin/bash
 PIP=pip3
 PYENV=~/.pyenv/lambda-tools/bin/activate
 FUNCTION := $(shell basename $(PWD))
+ZIP_PACKAGE=deployment-package.zip
+
+FUNCTION_NAME=lambda_function
 
 
+# Create virtual environment
 venv: env
 env: requirements.txt
 	${PYENV}
-	${PIP} install -r requirements.txt
-
-build: env
-	echo "Building ${FUNCTION}"
-	../scripts/deploy_lambda.py --build --function ${FUNCTION}
 
 # Deploy this Lambda function to AWS
 deploy: install
-install: env
-	../scripts/deploy_lambda.py --deploy --function ${FUNCTION}
+install: env zipfile upload
+
+zipfile: lambda_function.py
+	zip ${ZIP_PACKAGE} lambda_function.py
+
+upload:
+	aws lambda update-function-code --function-name ${FUNCTION_NAME} --zip-file fileb://${ZIP_PACKAGE}
+
+# Currently unused
+#	../scripts/deploy_lambda.py --deploy --function ${FUNCTION}
 
 clean:
-	rm -rf __pycache__
+	rm -rf __pycache__ *.zip
 
 distclean:
 	rm -rf deployments/deployment_* /tmp/*
 
 deactivate:
 	$(shell deactivate)
-
-# Install into AWS
-install:
 
 test: tests
 tests:
