Clean up Makefiles

--- a/lambda/Makefile
+++ b/lambda/Makefile
@@ -4,7 +4,7 @@ SHELL=/bin/bash
 PIP=pip3
 PYENV=~/.pyenv/lambda-tools/bin/activate
 FUNCTION := $(shell basename $(PWD))
-ZIP_PACKAGE=deployment-package.zip
+ZIP_PACKAGE=../../deployment-package.zip
 
 FUNCTION_NAME=cypher
 FUNCTION_FILES=substitution.py lambda_function.py
@@ -21,32 +21,29 @@ get-cypher-function:
 # Create virtual environment
 venv: env
 env: requirements.txt
+	${PIP} install -r requirements.txt
 	${PYENV}
 
-# Deploy this Lambda function to AWS
-deploy: install
-install: env zipfile upload
-
+deployment-package: zipfile
 zipfile: clean
-	zip ${ZIP_PACKAGE} ${FUNCTION_FILES}
-
-upload:
-	aws lambda update-function-code --function-name ${FUNCTION_NAME} --zip-file fileb://${ZIP_PACKAGE}
+	mkdir package
+	${PIP} install -r requirements.txt --target package
+	cp ${FUNCTION_FILES} package/
+	cd package
+	zip -r ${ZIP_PACKAGE} .
 
 # Currently unused
 #	../scripts/deploy_lambda.py --deploy --function ${FUNCTION}
 
-clean:
-	rm -rf __pycache__ ${ZIP_PACKAGE}
 
+clean: distclean
 distclean:
-	rm -rf deployments/deployment_* /tmp/*
+	rm -rf __pycache__ ${ZIP_PACKAGE} package
+	rm -rf deployments/deployment_*
 
 deactivate:
 	$(shell deactivate)
 
 test: tests
-tests:
-	${PIP} install -r requirements.txt
-#	env
+tests: env
 	pytest
